Update to latest versions
- Upate versions:
  - Theia 1.23.0
  - Update typescript and ESLint versions
  - Update modelserver and glsp-integration to latest versions
  - Attempt to fix logging for ModelServer Eclipse rcp product
  - Update GLSP to latest 0.10.0 versions

- Update Property label structure (due to GLSP Layout changes > 0.9.0)
  - Configure property info as individual SLabels
  - Adapt commands and label edit operation handler to handle three separate label edits
  - Adapt autocomplete edit ui
  - Remove brackets from label text and replace with text labels (not possible for edge labels atm)

--- a/client/packages/uml-sprotty/css/diagram.css
+++ b/client/packages/uml-sprotty/css/diagram.css
@@ -38,30 +38,22 @@ svg {
     stroke: var(--uml-border);
 }
 
-.sprotty-label-node>.sprotty-label {
-    dominant-baseline: middle;
-}
-
-.sprotty-label-node>.selection-feedback {
-    fill: transparent;
-    stroke: transparent;
-}
-
-.sprotty-label-node.selected>.selection-feedback {
-    stroke: var(--uml-border);
-    stroke-width: 1;
-}
-
-.sprotty-label-node.mouseover:not(.selected) {
-    text-decoration: underline;
-}
-
-.sprotty-label, .sprotty-label-node.selected {
-    stroke-width: 0;
-    width: inherit;
+.sprotty-label {
     fill: var(--uml-label);
     font-weight: inherit;
     font-size: 100%;
+}
+
+.selection-feedback {
+    fill: none;
+}
+
+.selection-feedback.hover {
+    stroke-width: 0.75;
+}
+
+.selection-feedback.selected {
+    stroke-width: 1.5;
 }
 
 .uml-comp-separator {
@@ -77,10 +69,12 @@ svg {
 
 .uml-edge.mouseover:not(.selected) {
     stroke-width: 2;
+    opacity: 1;
 }
 
 .uml-edge.selected {
     stroke-width: 3;
+    stroke-dasharray: none;
 }
 
 .uml-edge>.sprotty-routing-handle {
