--- a/client/packages/common/src/browser/style/icons-light.useable.css
+++ b/client/packages/common/src/browser/style/icons-light.useable.css
@@ -2,4 +2,5 @@
     --uml-icon-class: url(../../../resources/icons/light/Class.gif);
     --uml-icon-association: url(../../../resources/icons/light/Association.gif);
     --uml-icon-property: url(../../../resources/icons/light/Property.gif);
+    --uml-icon-enumeration: url(../../../resources/icons/light/Enumeration.gif);
 }
