--- a/client/packages/common/src/browser/style/common.css
+++ b/client/packages/common/src/browser/style/common.css
@@ -1,5 +1,5 @@
 /********************************************************************************
- * Copyright (c) 2021 EclipseSource and others.
+ * Copyright (c) 2021-2022 EclipseSource and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -47,4 +47,8 @@
 
 .umlproperty {
     background-image: var(--uml-icon-property);
+}
+
+.umlenumeration {
+    background-image: var(--uml-icon-enumeration);
 }
