--- a/client/packages/common/src/browser/style/icons-dark.useable.css
+++ b/client/packages/common/src/browser/style/icons-dark.useable.css
@@ -2,4 +2,5 @@
     --uml-icon-class: url(../../../resources/icons/dark/Class.gif);
     --uml-icon-association: url(../../../resources/icons/dark/Association.gif);
     --uml-icon-property: url(../../../resources/icons/dark/Property.gif);
+    --uml-icon-enumeration: url(../../../resources/icons/dark/Enumeration.gif);
 }
