Display, Create, Remove, Rename of EnumerationLiteral

--- a/client/packages/common/src/browser/style/common.css
+++ b/client/packages/common/src/browser/style/common.css
@@ -52,3 +52,7 @@
 .umlenumeration {
     background-image: var(--uml-icon-enumeration);
 }
+
+.umlenumerationliteral {
+    background-image: var(--uml-icon-enumerationliteral);
+}
