--- a/client/packages/common/src/browser/style/icons-dark.useable.css
+++ b/client/packages/common/src/browser/style/icons-dark.useable.css
@@ -3,4 +3,5 @@
     --uml-icon-association: url(../../../resources/icons/dark/Association.gif);
     --uml-icon-property: url(../../../resources/icons/dark/Property.gif);
     --uml-icon-enumeration: url(../../../resources/icons/dark/Enumeration.gif);
+    --uml-icon-enumerationliteral: url(../../../resources/icons/dark/EnumerationLiteral.gif);
 }
