--- a/client/packages/common/src/browser/style/icons-light.useable.css
+++ b/client/packages/common/src/browser/style/icons-light.useable.css
@@ -3,4 +3,5 @@
     --uml-icon-association: url(../../../resources/icons/light/Association.gif);
     --uml-icon-property: url(../../../resources/icons/light/Property.gif);
     --uml-icon-enumeration: url(../../../resources/icons/light/Enumeration.gif);
+    --uml-icon-enumerationliteral: url(../../../resources/icons/light/EnumerationLiteral.gif);
 }
