--- a/client/packages/uml-sprotty/css/diagram.css
+++ b/client/packages/uml-sprotty/css/diagram.css
@@ -89,6 +89,14 @@ svg {
     stroke-width: 3;
 }
 
+.uml-package > .sprotty-node {
+    fill: #88bd5c80;
+}
+
+.uml-package > .struct {
+    fill: none;
+}
+
 .sprotty-missing {
     stroke-width: 1;
     stroke: var(--uml-error);
